objects/State_Due_Date__mdt.object
<CustomObject>
    <fields>
        <fullName>ABBREVIATION__c</fullName>
        <label>ABBREVIATION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Attached_If_False__c</fullName>
        <label>Title Attached If False</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Attached_If_True__c</fullName>
        <label>Title Attached If True</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>State Due Date</label>
    <pluralLabel>State Due Dates</pluralLabel>
</CustomObject>